# cellular-artificial-life

./: .gitignore  README.md  brain.py  main.py  organism.py  pyproject.toml  requirements.txt
.github/workflows/: linter.yml  pylint.yml
Environment/: Board.py  Cell.py  CellState.py  Environment.py  GameField.py  Organism.py  brain.py  config.py  organism.py
environment/: __init__.py  board.py  brain.py  cell.py  config.py  environment.py  organism.py
